# TsaiWu-Fortran

./: CMakeLists.txt  LICENSE  abaqus-umat-interface.f90  aux_routines.f90  constants.f90  derived_types.f90  error-codes  interface_definitions.f90  material_info.f90  umat.f90
libraries/: CMakeLists.txt  constants_lib.f90  math_routines_lib.f90  stress_routines_lib.f90
return_mapping/: CMakeLists.txt  damage.f90  jacobian.f90  math_routines.f90  multsurf_check.f90  residuals.f90  return_mapping.f90  stress_routines.f90  stress_update.f90
return_mapping/model_components_all/: CMakeLists.txt  DDg_allDDs.f90  DDg_allDsDa.f90  Df_allDa.f90  Df_allDs.f90  Dg_allDs.f90  Dh_allDa.f90  Dh_allDs.f90  damage_deriv.f90  damage_var.f90  g_all.f90  hf_all.f90  model_comp_act.f90  yf_all.f90
